[package]
name = "ksni"
version = "0.3.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"
rust-version = "1.58"
description = """
A Rust implementation of the KDE/freedesktop StatusNotifierItem specification
"""
repository = "https://github.com/iovxw/ksni"
keywords = ["systray", "linux", "gui"]
categories = ["api-bindings"]
license = "Unlicense"

[features]
default = ["tokio"]
blocking = ["dep:once_cell"]
tokio = ["dep:tokio", "zbus/tokio"]
async-io = [
    "dep:async-io",
    "dep:async-lock",
    "dep:async-executor",
    "dep:futures-lite",
    "dep:futures-channel",
    "dep:once_cell",
    "zbus/async-io",
]

[dependencies]
paste = "1"
futures-util = "0.3"
zbus = { version = "4", default-features = false }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["rt", "macros"], optional = true }

async-io = { version = "2", optional = true }
async-lock = { version = "3", optional = true }
async-executor = { version = "1", optional = true }
futures-lite = { version = "2", optional = true }
futures-channel = { version = "0.3", optional = true }
once_cell = { version = "1", optional = true }

[dev-dependencies]
smol = "2"
smol-macros = "0.1"
macro_rules_attribute = "0.2"

[[example]]
name = "async"
required-features = ["tokio"]
[[example]]
name = "async_smol"
required-features = ["async-io"]
[[example]]
name = "blocking"
required-features = ["blocking"]
