[package]
name = "ksni"
version = "0.3.2"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"
rust-version = "1.80"
description = """
A Rust implementation of the KDE/freedesktop StatusNotifierItem specification
"""
repository = "https://github.com/iovxw/ksni"
keywords = ["systray", "linux", "gui"]
categories = ["api-bindings"]
license = "Unlicense"

[features]
default = ["tokio"]
blocking = ["dep:once_cell"]
tokio = ["dep:tokio", "zbus/tokio"]
async-io = [
    "dep:async-io",
    "dep:async-lock",
    "dep:async-executor",
    "dep:futures-lite",
    "dep:futures-channel",
    "dep:once_cell",
    "zbus/async-io",
]

[dependencies]
pastey = "0.2"
futures-util = "0.3"
zbus = { version = "5", default-features = false }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["rt", "macros"], optional = true }

async-io = { version = "2", optional = true }
async-lock = { version = "3", optional = true }
async-executor = { version = "1", optional = true }
futures-lite = { version = "2", optional = true }
futures-channel = { version = "0.3", optional = true }
once_cell = { version = "1", optional = true }

[dev-dependencies]
smol = "2"
smol-macros = "0.1"
macro_rules_attribute = "0.2"
image = "0.25"
zbus = { version = "5", default-features = false, features = ["blocking-api"] }
ashpd = "0.12"

[[example]]
name = "async"
required-features = ["tokio"]
doc-scrape-examples = true
[[example]]
name = "async_smol"
required-features = ["async-io"]
doc-scrape-examples = false
[[example]]
name = "blocking"
required-features = ["blocking"]
doc-scrape-examples = true
[[example]]
name = "custom_icon"
required-features = ["tokio"]
doc-scrape-examples = true

[[test]]
name = "tokio"
required-features = ["tokio"]
[[test]]
name = "smol"
required-features = ["async-io"]
[[test]]
name = "blocking"
required-features = ["blocking"]

[package.metadata.docs.rs]
features = ["blocking"]
